lab 3 - almost done

--- a/Lab3 Association Mining.ipynb
+++ b/Lab3 Association Mining.ipynb
@@ -133,34 +133,7 @@
     "num_obs = len(data_raw)\n",
     "bad_feature_names = ['', 'all- purpose']\n",
     "\n",
-    "data = None ## YOUR CODE HERE \n",
-    "\n",
-    "# Make a list of all the items\n",
-    "all_items = []\n",
-    "for i in range(num_obs):\n",
-    "    all_items += data_raw[i]['items']\n",
-    "    \n",
-    "# Find the unique item names\n",
-    "features_names = list(np.unique(all_items))\n",
-    "\n",
-    "# Remove bad item names\n",
-    "for bad_feature in bad_feature_names:\n",
-    "    features_names.remove(bad_feature)\n",
-    "\n",
-    "print('feature_names')\n",
-    "print(features_names)\n",
-    "print()\n",
-    "# Create a one-hot matrix\n",
-    "num_features = len(features_names)\n",
-    "data = np.zeros([num_obs, num_features])\n",
-    "for i in range(num_obs):\n",
-    "    for item in data_raw[i]['items']:\n",
-    "        if item not in bad_feature_names:\n",
-    "            j = features_names.index(item)\n",
-    "            data[i,j] = 1\n",
-    "\n",
-    "print('The data looks like this now:')\n",
-    "print(data)"
+    "data = None ## YOUR CODE HERE \n"
    ]
   },
   {
@@ -195,21 +168,7 @@
     "        $supp(X) = \\frac{\\text{# observations with X}}{\\text{Total # transactions}}$\n",
     "    \"\"\"\n",
     "    pass\n",
-    "    ## YOUR CODE HERE\n",
-    "    rule = X[:, combi].all(axis=1)\n",
-    "    support = rule.sum() / X.shape[0]\n",
-    "    return support\n",
-    "\n",
-    "print('Support for (0,1,2):', compute_support(data, (0,1,2)))\n",
-    "\n",
-    "support = []\n",
-    "for i in range(data.shape[1]):\n",
-    "    support.append(compute_support(data, (i,)))\n",
-    "\n",
-    "plt.figure(figsize=(10,4))\n",
-    "g = sns.barplot(x=features_names, y=support, color='b')\n",
-    "plt.xticks(rotation=90)\n",
-    "plt.show()"
+    "    ## YOUR CODE HERE\n"
    ]
   },
   {
@@ -246,15 +205,7 @@
     "        Output: A generator that produces all possible combinations \n",
     "    \"\"\"\n",
     "    \n",
-    "    ## YOUR CODE HERE \n",
-    "    items_types_in_previous_step = np.unique(old_combinations.flatten())\n",
-    "    \n",
-    "    for old_combination in old_combinations:\n",
-    "        max_combination = max(old_combination)\n",
-    "        for item in items_types_in_previous_step:\n",
-    "            if item > max_combination:\n",
-    "                res = tuple(old_combination) + (item,)\n",
-    "                yield res"
+    "    ## YOUR CODE HERE \n"
    ]
   },
   {
@@ -358,43 +309,7 @@
     "while itemset_len:\n",
     "    pass\n",
     "    \n",
-    "    ## YOUR CODE HERE \n",
-    "    next_itemset_len = itemset_len + 1\n",
-    "    combin = candidate_generation(itemset_dict[itemset_len])\n",
-    "    frequent_items = []\n",
-    "    frequent_items_support = []\n",
-    "\n",
-    "    for c in combin:\n",
-    "        support = compute_support(data, c)\n",
-    "        \n",
-    "        if support >= min_support:\n",
-    "            frequent_items.append(c)\n",
-    "            frequent_items_support.append(support)\n",
-    "\n",
-    "    if frequent_items:\n",
-    "        itemset_dict[next_itemset_len] = np.array(frequent_items)\n",
-    "        support_dict[next_itemset_len] = np.array(frequent_items_support)\n",
-    "        itemset_len = next_itemset_len\n",
-    "    else:\n",
-    "        itemset_len = 0\n",
-    "\n",
-    "\n",
-    "all_res = []\n",
-    "for k in sorted(itemset_dict):\n",
-    "    support = pd.Series(support_dict[k])\n",
-    "    itemsets = pd.Series([frozenset(i) for i in itemset_dict[k]])\n",
-    "\n",
-    "    res = pd.concat((support, itemsets), axis=1)\n",
-    "    all_res.append(res)\n",
-    "\n",
-    "res_df = pd.concat(all_res)\n",
-    "res_df.columns = ['support', 'itemsets']\n",
-    "res_df = res_df.reset_index(drop=True)\n",
-    "\n",
-    "\n",
-    "# Print results in a human readable manner\n",
-    "for i in range(37, len(res_df)):\n",
-    "    print([features_names[i] for i in res_df.itemsets[i]], 'has support', res_df.support[i])\n"
+    "    ## YOUR CODE HERE \n"
    ]
   },
   {
@@ -435,43 +350,7 @@
     "    pass\n",
     "\n",
     "\n",
-    "## YOUR CODE HERE\n",
-    "def compute_confidence(supAC, supA):\n",
-    "    \"\"\" The confidence for `X->Y` is the likelihood that `Y` is purchased, if `X` is purchased. \n",
-    "        This is the same as the conditional probability.\n",
-    "        $conf(X \\rightarrow Y) = \\frac{supp(X \\cup Y)}{supp(X)}$\n",
-    "    \"\"\"\n",
-    "    return supAC / supA\n",
-    "\n",
-    "def compute_lift(supAC, supA, supC):\n",
-    "    \"\"\" \n",
-    "        $lift(X\\rightarrow Y) = \\frac{supp(X \\cup Y)}{supp(X) supp(Y)}$        \n",
-    "    \"\"\"\n",
-    "    conf = compute_confidence(supAC, supA)\n",
-    "    return conf / supC\n",
-    "    \n",
-    "\n",
-    "def compute_conviction(supAC, supA, supC):\n",
-    "    \"\"\" How much better than chance is this association?\n",
-    "        \n",
-    "        $conv(X \\rightarrow Y) = \\frac{1-supp(Y)}{1-conf(X->Y)}$\n",
-    "    \"\"\"\n",
-    "\n",
-    "    conf = compute_confidence(supAC, supA)\n",
-    "    conviction = np.empty(conf.shape, dtype=float)\n",
-    "    \n",
-    "#     if not len(conviction.shape):\n",
-    "#         conviction = conviction[np.newaxis]\n",
-    "#         confidence = confidence[np.newaxis]\n",
-    "#         sAC = sAC[np.newaxis]\n",
-    "#         sA = sA[np.newaxis]\n",
-    "#         sC = sC[np.newaxis]\n",
-    "        \n",
-    "    conviction[:] = np.inf\n",
-    "    conviction[conf < 1.] = ((1. - sC[conf < 1.]) /\n",
-    "                            (1. - conf[conf < 1.]))\n",
-    "\n",
-    "    return conviction\n"
+    "## YOUR CODE HERE\n"
    ]
   },
   {
@@ -499,60 +378,7 @@
     "score_function = lambda supAC, supA, supC: compute_confidence(supAC, supA)\n",
     "min_threshold = 0.3\n",
     "\n",
-    "## YOUR CODE HERE\n",
-    "keys = res_df['itemsets'].values\n",
-    "values = res_df['support'].values\n",
-    "\n",
-    "frozenset_vect = np.vectorize(lambda x: frozenset(x))\n",
-    "frequent_items_dict = dict(zip(frozenset_vect(keys), values))\n",
-    "\n",
-    "# prepare buckets to collect frequent rules\n",
-    "rule_antecedents = []\n",
-    "rule_consequents = []\n",
-    "rule_supports = []\n",
-    "\n",
-    "# iterate over all frequent itemsets\n",
-    "for k in frequent_items_dict.keys():\n",
-    "    supAC = frequent_items_dict[k]\n",
-    "\n",
-    "    # find all possible combinations\n",
-    "    for idx in range(len(k)-1, 0, -1):\n",
-    "        # of antecedent and consequent\n",
-    "        for c in combinations(k, r=idx):\n",
-    "            antecedent = frozenset(c)\n",
-    "            consequent = k.difference(antecedent)\n",
-    "\n",
-    "            supA = frequent_items_dict[antecedent]\n",
-    "            supC = frequent_items_dict[consequent]\n",
-    "\n",
-    "            confidence = None\n",
-    "            lift = None\n",
-    "            conviction = None\n",
-    "            score = 1\n",
-    "            if score >= min_threshold:\n",
-    "                rule_antecedents.append(antecedent)\n",
-    "                rule_consequents.append(consequent)\n",
-    "                rule_supports.append([supAC, supA, supC])\n",
-    "\n",
-    "\n",
-    "# generate metrics\n",
-    "rule_supports = np.array(rule_supports).T.astype(float)\n",
-    "df_res = pd.DataFrame(\n",
-    "    data=list(zip(rule_antecedents, rule_consequents)),\n",
-    "    columns=[\"antecedents\", \"consequents\"])\n",
-    "\n",
-    "sAC = rule_supports[0]\n",
-    "sA = rule_supports[1]\n",
-    "sC = rule_supports[2]\n",
-    "\n",
-    "\n",
-    "# TODO\n",
-    "df_res['total_support'] = 0\n",
-    "df_res['antecedent_support'] = 0\n",
-    "df_res['consequent_support'] = 0\n",
-    "df_res['confidence'] = 0\n",
-    "df_res['lift'] = 0\n",
-    "df_res['conviction'] = 0\n"
+    "## YOUR CODE HERE\n"
    ]
   }
  ],
