--- a/development/Lab3 Association Mining.ipynb
+++ b/development/Lab3 Association Mining.ipynb
@@ -91,18 +91,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# Check that data and data path is present\n",
-    "data_folder = \"../data/\"\n",
+    "data_folder = \"./data/\"\n",
     "data_filename = \"shopping.json\"\n",
     "assert os.path.isdir(data_folder) and os.path.exists(data_folder + data_filename), 'Data not found. Make sure to have the most recent version!'\n",
     "\n",
+    "# Load data\n",
     "with open(data_folder + data_filename) as f:\n",
     "    data_raw = json.load(f)\n",
     "\n",
+    "# Examine data\n",
     "print('Number of observations', len(data_raw))\n",
     "pprint(data_raw[0])"
    ]
@@ -161,7 +163,8 @@
     "            j = features_names.index(item)\n",
     "            data[i,j] = 1\n",
     "\n",
-    "print('The data looks like this now:')\n"
+    "print('The data looks like this now:')\n",
+    "data"
    ]
   },
   {
@@ -265,19 +268,28 @@
     "The cell below serves as a test of `candidate_generation`. \n",
     "If your function is written correctly the output shold be as follows:\n",
     "\n",
-    "    [[0 1 2 3]]\n",
-    "\n",
-    "    [[0 0 0 1 1 2]\n",
-    "     [1 2 3 2 3 3]]\n",
-    "\n",
-    "    [[0 0 0 1]\n",
-    "     [1 1 2 2]\n",
-    "     [2 3 3 3]]\n",
-    "\n",
+    "    Itemset length: 1\n",
     "    [[0]\n",
     "     [1]\n",
     "     [2]\n",
-    "     [3]]\n"
+    "     [3]]\n",
+    "\n",
+    "    Itemset length: 2\n",
+    "    [[0 1]\n",
+    "     [0 2]\n",
+    "     [0 3]\n",
+    "     [1 2]\n",
+    "     [1 3]\n",
+    "     [2 3]]\n",
+    "\n",
+    "    Itemset length: 3\n",
+    "    [[0 1 2]\n",
+    "     [0 1 3]\n",
+    "     [0 2 3]\n",
+    "     [1 2 3]]\n",
+    "\n",
+    "    Itemset length: 4\n",
+    "    [[0 1 2 3]]"
    ]
   },
   {
@@ -288,29 +300,15 @@
    "source": [
     "# Test of candidate_generation\n",
     "comb = np.array([[0],[1],[2],[3]])\n",
-    "print(comb.T)\n",
-    "print()\n",
     "\n",
-    "new_comb = []\n",
-    "for c in candidate_generation(comb):\n",
-    "    new_comb.append(c)\n",
-    "comb = np.array(new_comb)\n",
-    "\n",
-    "print(comb.T)\n",
-    "print()\n",
-    "\n",
-    "new_comb = []\n",
-    "for c in candidate_generation(comb):\n",
-    "    new_comb.append(c)\n",
-    "comb = np.array(new_comb)\n",
-    "print(comb.T)\n",
-    "print()\n",
-    "\n",
-    "new_comb = []\n",
-    "for c in candidate_generation(comb):\n",
-    "    new_comb.append(c)\n",
-    "comb = np.array(new_comb)\n",
-    "print(comb.T)"
+    "while len(comb)>0:\n",
+    "    print('Itemset length:', len(comb[0]))\n",
+    "    print(comb)\n",
+    "    print()\n",
+    "    new_comb = []\n",
+    "    for c in candidate_generation(comb):\n",
+    "        new_comb.append(c)\n",
+    "    comb = np.array(new_comb)\n"
    ]
   },
   {
@@ -321,7 +319,6 @@
     "> Estimated task time: 25 min\n",
     "\n",
     "In this task we will find all the sets that have sufficient support.\n",
-    "\n",
     "\n",
     "Your task:\n",
     "1. Finish the code below using what you have already done in the previous tasks. Each iteration of the loop should:\n",
@@ -396,7 +393,7 @@
     "\n",
     "# Print results in a human readable manner\n",
     "for i in range(37, len(res_df)):\n",
-    "    print([features_names[i] for i in res_df.itemsets[i]], 'has support', res_df.support[i])\n"
+    "    print([features_names[i] for i in res_df.itemsets[i]], '\\t has support {:.4f}'.format(res_df.support[i]))\n"
    ]
   },
   {
@@ -406,8 +403,7 @@
     "## Task 5: Confidence, Lift, Conviction\n",
     "> Estimated task time: 10 min\n",
     "\n",
-    "We now\n",
-    "TEST IT!"
+    "Complete the functions computing confidence, lift, and conviction:"
    ]
   },
   {
@@ -483,7 +479,9 @@
     "## Task 6: Association Rules\n",
     "> Estimated task time: 25 min\n",
     "\n",
-    "Your tasks\n",
+    "Now we put it all together, and complete the apriori algorithm!\n",
+    "\n",
+    "Your tasks:\n",
     "1. Write a for-loop that for each set of size 2 or larger\n",
     " * computes all possilbe association rules (e.g. {A, B, C} becomes {{A -> B, C}, {A, B -> C}, {A, C -> B}, {B, C -> A})\n",
     " * for each association rule compute the score (`score_function`). \n",
@@ -526,16 +524,11 @@
     "\n",
     "            supA = frequent_items_dict[antecedent]\n",
     "            supC = frequent_items_dict[consequent]\n",
-    "\n",
-    "            confidence = None\n",
-    "            lift = None\n",
-    "            conviction = None\n",
-    "            score = 1\n",
+    "            score = score_function(supAC, supA, supC)\n",
     "            if score >= min_threshold:\n",
     "                rule_antecedents.append(antecedent)\n",
     "                rule_consequents.append(consequent)\n",
     "                rule_supports.append([supAC, supA, supC])\n",
-    "\n",
     "\n",
     "# generate metrics\n",
     "rule_supports = np.array(rule_supports).T.astype(float)\n",
@@ -543,19 +536,26 @@
     "    data=list(zip(rule_antecedents, rule_consequents)),\n",
     "    columns=[\"antecedents\", \"consequents\"])\n",
     "\n",
-    "sAC = rule_supports[0]\n",
-    "sA = rule_supports[1]\n",
-    "sC = rule_supports[2]\n",
+    "supAC = rule_supports[0]\n",
+    "supA = rule_supports[1]\n",
+    "supC = rule_supports[2]\n",
     "\n",
+    "df_res['total_support'] = supAC\n",
+    "df_res['antecedent_support'] = supA\n",
+    "df_res['consequent_support'] = supC\n",
+    "df_res['confidence'] = compute_confidence(supAC, supA)\n",
+    "df_res['lift'] = compute_lift(supAC, supA, supC)\n",
+    "df_res['conviction'] = compute_conviction(supAC, supA, supC)\n",
     "\n",
-    "# TODO\n",
-    "df_res['total_support'] = 0\n",
-    "df_res['antecedent_support'] = 0\n",
-    "df_res['consequent_support'] = 0\n",
-    "df_res['confidence'] = 0\n",
-    "df_res['lift'] = 0\n",
-    "df_res['conviction'] = 0\n"
+    "df_res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
