--- a/Lab2 Visualizations.ipynb
+++ b/Lab2 Visualizations.ipynb
@@ -35,16 +35,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# install dependencies\n",
-    "!pip install --user statsmodels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Makes matplotlib plots work better with Jupyter\n",
     "%matplotlib inline\n",
     "\n",
@@ -154,8 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE \n"
-   ]
+    "## YOUR CODE HERE \n"   ]
   },
   {
    "cell_type": "markdown",
@@ -265,8 +254,7 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -336,8 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
