--- a/Lab3 Association Mining.ipynb
+++ b/Lab3 Association Mining.ipynb
@@ -90,17 +90,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# Check that data and data path is present\n",
-    "data_folder = \"../data/\"\n",
+    "data_folder = \"./data/\"\n",
     "data_filename = \"shopping.json\"\n",
     "assert os.path.isdir(data_folder) and os.path.exists(data_folder + data_filename), 'Data not found. Make sure to have the most recent version!'\n",
     "\n",
+    "# Load data\n",
     "with open(data_folder + data_filename) as f:\n",
     "    data_raw = json.load(f)\n",
     "\n",
+    "# Examine data\n",
     "print('Number of observations', len(data_raw))\n",
     "pprint(data_raw[0])"
    ]
@@ -133,8 +137,7 @@
     "num_obs = len(data_raw)\n",
     "bad_feature_names = ['', 'all- purpose']\n",
     "\n",
-    "data = None ## YOUR CODE HERE \n"
-   ]
+    "data = None ## YOUR CODE HERE \n"   ]
   },
   {
    "cell_type": "markdown",
@@ -168,8 +171,7 @@
     "        $supp(X) = \\frac{\\text{# observations with X}}{\\text{Total # transactions}}$\n",
     "    \"\"\"\n",
     "    pass\n",
-    "    ## YOUR CODE HERE\n"
-   ]
+    "    ## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -205,8 +207,7 @@
     "        Output: A generator that produces all possible combinations \n",
     "    \"\"\"\n",
     "    \n",
-    "    ## YOUR CODE HERE \n"
-   ]
+    "    ## YOUR CODE HERE \n"   ]
   },
   {
    "cell_type": "markdown",
@@ -215,19 +216,28 @@
     "The cell below serves as a test of `candidate_generation`. \n",
     "If your function is written correctly the output shold be as follows:\n",
     "\n",
-    "    [[0 1 2 3]]\n",
-    "\n",
-    "    [[0 0 0 1 1 2]\n",
-    "     [1 2 3 2 3 3]]\n",
-    "\n",
-    "    [[0 0 0 1]\n",
-    "     [1 1 2 2]\n",
-    "     [2 3 3 3]]\n",
-    "\n",
+    "    Itemset length: 1\n",
     "    [[0]\n",
     "     [1]\n",
     "     [2]\n",
-    "     [3]]\n"
+    "     [3]]\n",
+    "\n",
+    "    Itemset length: 2\n",
+    "    [[0 1]\n",
+    "     [0 2]\n",
+    "     [0 3]\n",
+    "     [1 2]\n",
+    "     [1 3]\n",
+    "     [2 3]]\n",
+    "\n",
+    "    Itemset length: 3\n",
+    "    [[0 1 2]\n",
+    "     [0 1 3]\n",
+    "     [0 2 3]\n",
+    "     [1 2 3]]\n",
+    "\n",
+    "    Itemset length: 4\n",
+    "    [[0 1 2 3]]"
    ]
   },
   {
@@ -238,28 +248,15 @@
    "source": [
     "# Test of candidate_generation\n",
     "comb = np.array([[0],[1],[2],[3]])\n",
-    "print(comb.T)\n",
-    "print()\n",
     "\n",
-    "new_comb = []\n",
-    "for c in candidate_generation(comb):\n",
-    "    new_comb.append(c)\n",
-    "comb = np.array(new_comb)\n",
-    "print(comb.T)\n",
-    "print()\n",
-    "\n",
-    "new_comb = []\n",
-    "for c in candidate_generation(comb):\n",
-    "    new_comb.append(c)\n",
-    "comb = np.array(new_comb)\n",
-    "print(comb.T)\n",
-    "print()\n",
-    "\n",
-    "new_comb = []\n",
-    "for c in candidate_generation(comb):\n",
-    "    new_comb.append(c)\n",
-    "comb = np.array(new_comb)\n",
-    "print(comb.T)"
+    "while len(comb)>0:\n",
+    "    print('Itemset length:', len(comb[0]))\n",
+    "    print(comb)\n",
+    "    print()\n",
+    "    new_comb = []\n",
+    "    for c in candidate_generation(comb):\n",
+    "        new_comb.append(c)\n",
+    "    comb = np.array(new_comb)\n"
    ]
   },
   {
@@ -270,7 +267,6 @@
     "> Estimated task time: 25 min\n",
     "\n",
     "In this task we will find all the sets that have sufficient support.\n",
-    "\n",
     "\n",
     "Your task:\n",
     "1. Finish the code below using what you have already done in the previous tasks. Each iteration of the loop should:\n",
@@ -309,8 +305,7 @@
     "while itemset_len:\n",
     "    pass\n",
     "    \n",
-    "    ## YOUR CODE HERE \n"
-   ]
+    "    ## YOUR CODE HERE \n"   ]
   },
   {
    "cell_type": "markdown",
@@ -319,8 +314,7 @@
     "## Task 5: Confidence, Lift, Conviction\n",
     "> Estimated task time: 10 min\n",
     "\n",
-    "We now\n",
-    "TEST IT!"
+    "Complete the functions computing confidence, lift, and conviction:"
    ]
   },
   {
@@ -350,8 +344,7 @@
     "    pass\n",
     "\n",
     "\n",
-    "## YOUR CODE HERE\n"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -360,7 +353,9 @@
     "## Task 6: Association Rules\n",
     "> Estimated task time: 25 min\n",
     "\n",
-    "Your tasks\n",
+    "Now we put it all together, and complete the apriori algorithm!\n",
+    "\n",
+    "Your tasks:\n",
     "1. Write a for-loop that for each set of size 2 or larger\n",
     " * computes all possilbe association rules (e.g. {A, B, C} becomes {{A -> B, C}, {A, B -> C}, {A, C -> B}, {B, C -> A})\n",
     " * for each association rule compute the score (`score_function`). \n",
@@ -378,8 +373,14 @@
     "score_function = lambda supAC, supA, supC: compute_confidence(supAC, supA)\n",
     "min_threshold = 0.3\n",
     "\n",
-    "## YOUR CODE HERE\n"
-   ]
+    "## YOUR CODE HERE\n"   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
