--- a/development/Lab2 Visualizations.ipynb
+++ b/development/Lab2 Visualizations.ipynb
@@ -63,8 +63,7 @@
    "outputs": [],
    "source": [
     "# Check that data and data path is present\n",
-    "# TODO fix path\n",
-    "basedir = \"../\"\n",
+    "basedir = \"./\"\n",
     "file = \"fifa.csv\"\n",
     "assert os.path.isdir(f\"{basedir}data\") and os.path.exists(f\"{basedir}data/{file}\"), 'Data not found. Make sure to have the most recent version!'\n",
     "\n",
