--- a/Lab2 Visualizations.ipynb
+++ b/Lab2 Visualizations.ipynb
@@ -35,6 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# install dependencies\n",
+    "!pip install --user statsmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Makes matplotlib plots work better with Jupyter\n",
     "%matplotlib inline\n",
     "\n",
@@ -144,7 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE \n"   ]
+    "## YOUR CODE HERE \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,7 +265,8 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"   ]
+    "## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,7 +336,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"   ]
+    "## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "markdown",
