--- a/development/Lab4 Classification.ipynb
+++ b/development/Lab4 Classification.ipynb
@@ -9,7 +9,7 @@
     "This week's exercise will be a bit shorter. The objective is to implement the core of the k-nn algorithm (most of the pre-processing and evaluation is given), followed by a Q&A moment\n",
     "\n",
     "Schedule:\n",
-    "* Classify data using k-means\n",
+    "* Classify data using k-neighbors\n",
     "* Use a confusion matrix to evluate models\n",
     "* Q&A on the last lectures\n",
     "\n",
@@ -84,6 +84,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The scatter plots shows that the `Position` of a player could be related to some of their statistics. The dataset contains 30+ statistics and we don't know which ones will be most helpful, so we are picking an arbitrary subset to avoid the [curse of dimensionality](https://en.wikipedia.org/wiki/Curse_of_dimensionality).\n",
+    "It's also possible to choose the best ones [algorithmically](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm#Feature_extraction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_features = ['Crossing','Finishing','HeadingAccuracy','ShortPassing','Volleys','Dribbling','Curve','FKAccuracy','LongPassing',\n",
+    "            'BallControl','Acceleration','SprintSpeed','Agility','Reactions','Balance','ShotPower','Jumping','Stamina',\n",
+    "            'Strength','LongShots','Aggression','Interceptions','Positioning','Vision','Penalties','Composure',\n",
+    "            'Marking','StandingTackle','SlidingTackle','GKDiving','GKHandling','GKKicking','GKPositioning','GKReflexes']\n",
+    "\n",
+    "features = [\"SprintSpeed\",\"Agility\",\"ShotPower\",\"Strength\"]\n",
+    "# cleaning: remove all the lines that contain a NaN in one of the feature columns\n",
+    "data = data.dropna(subset=features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Classification problem\n",
     "\n",
     "0. pick a value for K (number of clusters) and N (number of neighbors)\n",
@@ -100,11 +124,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ['Crossing','Finishing','HeadingAccuracy','ShortPassing','Volleys','Dribbling','Curve','FKAccuracy','LongPassing','BallControl','Acceleration','SprintSpeed','Agility','Reactions','Balance','ShotPower','Jumping','Stamina','Strength','LongShots','Aggression','Interceptions','Positioning','Vision','Penalties','Composure','Marking','StandingTackle','SlidingTackle','GKDiving','GKHandling','GKKicking','GKPositioning','GKReflexes']\n",
-    "class_col = 'Position'\n",
-    "\n",
-    "# cleaning: remove all the lines that contain a NaN in one of the feature columns\n",
-    "data = data.dropna(subset=fields)"
+    "# 0: define and N\n",
+    "K = 17"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Choose the right K can be tricky. As usual, [stand on the shoulder of giants](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm#Parameter_selection)"
    ]
   },
   {
@@ -113,50 +141,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 0: define K and N\n",
-    "K = 5\n",
-    "N = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1: split\n",
-    "\n",
-    "# random split. It's always a good idea (maybe the dataset is sorted, and so on).\n",
-    "# df.sample has a parameter random_state that allows you to always get the same split (useful for testing). Check docs\n",
-    "train_set = data.sample(frac=0.995)\n",
-    "valid_set = data.drop(train_set.index)\n",
-    "\n",
-    "valid_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# 3: implement knn\n",
     "## YOUR CODE HERE\n",
-    "# 3: classify\n",
-    "nearest_neighbors = lambda x: (train_set[features].sub(x[features])\n",
+    "nearest_neighbors = lambda x, train_set: (train_set[features].sub(x[features])\n",
     "                               .pow(2).sum(1).pow(0.5)\n",
-    "                               .nsmallest(N)  # \n",
+    "                               .nsmallest(K)  # \n",
     "                               )\n",
     "\n",
-    "classify = lambda x: (train_set.iloc[nearest_neighbors(x)]\n",
+    "knn_classification = lambda x, class_col, train_set: (train_set.iloc[nearest_neighbors(x, train_set)]\n",
     "                      [class_col]\n",
-    "                      .mode()[0])\n",
-    "\n",
-    "classified_set = valid_set\n",
-    "# classified_set.reset_index()\n",
-    "# classified_set\n",
-    "classified_set['Calculated Position'] = valid_set.apply(classify, axis=1)\n",
-    "classified_set[['Position', 'Calculated Position']]\n",
-    "# classified_set.reset_index()"
+    "                      .mode()[0])\n"
    ]
   },
   {
@@ -165,28 +159,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 3\n",
+    "def classify(dataset, class_col, random_state=None, frac=0.995):\n",
+    "    # 1: random split. It's always a good idea (maybe the dataset is sorted, and so on).\n",
+    "    # random_state that you to always get the same split (useful for testing). Check docs\n",
+    "    train_set = data.sample(frac=frac, random_state=random_state)\n",
+    "    valid_set = data.drop(train_set.index)\n",
+    "\n",
+    "    classified_set = valid_set\n",
+    "    classified_set[f'Calculated {class_col}'] = valid_set.apply(\n",
+    "        lambda x: knn_classification(x, class_col, train_set),\n",
+    "        axis=1\n",
+    "    )\n",
+    "    return classified_set\n",
+    "\n",
+    "classified_position = classify(data, 'Position')[['Position', 'Calculated Position']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Binary classification with positive class\n",
+    "In many cases, it's important to determine if a datapoint belongs or not to a certain class or not and the distribution is skewed (poisonus/not poisonus, cancer/not cancer, ...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = 3\n",
     "\n",
     "data['Goalkeeper'] = data['Position'] == 'GK'\n",
-    "data\n",
     "\n",
-    "class_col = 'Goalkeeper'\n",
-    "\n",
-    "train_set = data.sample(frac=0.99)\n",
-    "valid_set = data.drop(train_set.index)\n",
-    "\n",
-    "classified_set = valid_set\n",
-    "classified_set['Calculated Goalkeeper'] = valid_set.apply(classify, axis=1)\n",
-    "classified_set[['Goalkeeper', 'Calculated Goalkeeper']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# len(classified_set[classified_set['Goalkeeper'] == classified_set['Calculated Goalkeeper']]) / len(classified_set)"
+    "classified_goalkeeper = classify(data, 'Goalkeeper', frac=0.99)[['Goalkeeper', 'Calculated Goalkeeper']]"
    ]
   },
   {
@@ -240,16 +247,7 @@
     "    heatmap.xaxis.set_ticklabels(heatmap.xaxis.get_ticklabels(), rotation=45, ha='right', fontsize=fontsize)\n",
     "    plt.ylabel('True label')\n",
     "    plt.xlabel('Predicted label')\n",
-    "    return fig\n",
-    "\n",
-    "labels = data[class_col].unique()\n",
-    "classified_set[[class_col, f'Calculated {class_col}']]\n",
-    "cm = confusion_matrix(classified_set[class_col], classified_set[f'Calculated {class_col}'], labels=labels)\n",
-    "\n",
-    "print_confusion_matrix(\n",
-    "    cm,\n",
-    "    labels\n",
-    ")"
+    "    return fig\n"
    ]
   },
   {
@@ -258,25 +256,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tn, fp, fn, tp = cm.ravel()\n",
+    "def print_results(data, class_col, unraveld=False):\n",
+    "    labels = data[class_col].unique()\n",
+    "    cm = confusion_matrix(data[class_col], data[f'Calculated {class_col}'], labels=labels)\n",
     "\n",
-    "accuracy = (tp + tn) / (tn + fp + fn + tp)\n",
-    "err_rate = (fp + fn) / (tn + fp + fn + tp)\n",
-    "sensitiv = (tp) / (fp + tp)\n",
-    "specific = (tn) / (tn + fn)\n",
+    "    print_confusion_matrix(\n",
+    "        cm,\n",
+    "        labels\n",
+    "    )\n",
+    "    plt.show()  # wait for the render (otherwise it will print the graphs async, after the strings)\n",
+    "    \n",
+    "    if unraveld:\n",
+    "        tn, fp, fn, tp = cm.ravel()\n",
     "\n",
-    "print(cm.ravel())\n",
-    "print(f'Accuracy: {accuracy}')\n",
-    "print(f'Error rate: {err_rate}')\n",
-    "print(f'Sensitivity: {sensitiv}')\n",
-    "print(f'Specificity: {specific}')"
+    "        accuracy = (tp + tn) / (tn + fp + fn + tp)\n",
+    "        err_rate = (fp + fn) / (tn + fp + fn + tp)\n",
+    "        sensitiv = (tp) / (fp + tp)\n",
+    "        specific = (tn) / (tn + fn)\n",
+    "\n",
+    "        print(cm.ravel())\n",
+    "        print(f'Accuracy: {accuracy}')\n",
+    "        print(f'Error rate: {err_rate}')\n",
+    "        print(f'Sensitivity: {sensitiv}')\n",
+    "        print(f'Specificity: {specific}')\n",
+    "    \n",
+    "    \n",
+    "print_results(classified_position, 'Position')\n",
+    "print_results(classified_goalkeeper, 'Goalkeeper', unraveld=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear regression?"
+    "The accuracy seems high for the `Goalkeeper` class, but because the percentage of goalkeepers is low. In those cases, Snsitivity is a much better metric. Here will probably be very low because the metric are chosen arbitrarly. You can check the link above to see how to pick appropriate dimensions.\n",
+    "\n",
+    "Additionally, for skewed distributions:\n",
+    "> A drawback of the basic \"majority voting\" classification occurs when the class distribution is skewed. That is, examples of a more frequent class tend to dominate the prediction of the new example, because they tend to be common among the k nearest neighbors due to their large number[[4]](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm#cite_note-Coomans_Massart1982-4). One way to overcome this problem is to weight the classification, taking into account the distance from the test point to each of its k nearest neighbors. The class (or value, in regression problems) of each of the k nearest points is multiplied by a weight proportional to the inverse of the distance from that point to the test point"
    ]
   }
  ],
