--- a/Lab4 Classification.ipynb
+++ b/Lab4 Classification.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Check that data and data path is present\n",
-    "basedir = \"../\"\n",
+    "basedir = \"./\"\n",
     "file = \"fifa.csv\"\n",
     "assert os.path.isdir(f\"{basedir}data\") and os.path.exists(f\"{basedir}data/{file}\"), 'Data not found. Make sure to have the most recent version!'\n",
     "\n",
@@ -142,7 +142,10 @@
    "outputs": [],
    "source": [
     "# 3: implement knn\n",
-    "## YOUR CODE HERE\n"   ]
+    "def knn_classification(x, class_col, train_set):\n",
+    "    print('NotImplemented')\n",
+    "    ## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -272,7 +275,7 @@
     "        print(f'Specificity: {specific}')\n",
     "    \n",
     "    \n",
-    "print_results(classified_position, 'Position')\n",
+    "# print_results(classified_position, 'Position')\n",
     "print_results(classified_goalkeeper, 'Goalkeeper', unraveld=True)"
    ]
   },
