Lab4 fixed link

--- a/Lab4 Classification.ipynb
+++ b/Lab4 Classification.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "source": [
     "The scatter plots shows that the `Position` of a player could be related to some of their statistics. The dataset contains 30+ statistics and we don't know which ones will be most helpful, so we are picking an arbitrary subset to avoid the [curse of dimensionality](https://en.wikipedia.org/wiki/Curse_of_dimensionality).\n",
-    "It's also possible to choose the best ones [algorithmically](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm#Feature_extraction)"
+    "It's also possible to choose the best ones [algorithmically](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm#Dimension_reduction)"
    ]
   },
   {
