--- a/Lab2 Visualizations.ipynb
+++ b/Lab2 Visualizations.ipynb
@@ -144,8 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE \n"
-   ]
+    "## YOUR CODE HERE \n"   ]
   },
   {
    "cell_type": "markdown",
@@ -255,8 +254,7 @@
    },
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
@@ -326,8 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE HERE\n"
-   ]
+    "## YOUR CODE HERE\n"   ]
   },
   {
    "cell_type": "markdown",
