--- a/Lab5 Decision Trees.ipynb
+++ b/Lab5 Decision Trees.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,32 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature Names: ['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
-      "Target Names:  ['setosa' 'versicolor' 'virginica']\n",
-      "data\t\t (150, 5)\n",
-      "data_test\t (15, 5)\n",
-      "data_train\t (135, 5)\n",
-      "\n",
-      "Example data\n",
-      "[[4.9 3.  1.4 0.2 0. ]\n",
-      " [5.1 3.5 1.4 0.3 0. ]\n",
-      " [4.9 3.1 1.5 0.1 0. ]\n",
-      " [6.4 3.2 4.5 1.5 1. ]\n",
-      " [5.8 2.7 4.1 1.  1. ]\n",
-      " [5.4 3.  4.5 1.5 1. ]\n",
-      " [5.8 2.7 5.1 1.9 2. ]\n",
-      " [7.7 3.8 6.7 2.2 2. ]\n",
-      " [6.1 2.6 5.6 1.4 2. ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = np.concatenate([iris.data, iris.target[:,None]], axis=-1) \n",
     "\n",
@@ -136,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,20 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The class distribution is as follows:\n",
-      "Total:\t {2.0: 50, 0.0: 50, 1.0: 50}\n",
-      "Train:\t {0.0: 45, 1.0: 45, 2.0: 45}\n",
-      "Test:\t {2.0: 5, 1.0: 5, 0.0: 5}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('The class distribution is as follows:')\n",
     "print('Total:\\t', class_counts(data))\n",
@@ -202,19 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "compute_impurity(data_class)\t\t 0.6666666666666665\n",
-      "compute_impurity(data_class[:90])\t 0.5\n",
-      "compute_impurity(data_class[:45])\t 0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def compute_impurity(data):\n",
     "    \"\"\" Calculate the impurity using the Gini Impurity Metric.\n",
@@ -258,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,8 +226,8 @@
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, column, value):\n",
-    "        self.column = column\n",
-    "        self.value = value\n",
+    "        self.column = column  # Feautre \n",
+    "        self.value = value    # Threshold\n",
     "        self.value_is_numerical = is_numeric(self.value)\n",
     "\n",
     "    def __repr__(self):\n",
@@ -293,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +420,21 @@
     "    \"\"\" Recursively search\n",
     "    \"\"\"\n",
     "    \n",
-    "    pass ## YOUR CODE HERE\n"   ]
+    "    # Base case: we've reached a leaf\n",
+    "    if isinstance(node, Leaf_Node):\n",
+    "        return node.predictions\n",
+    "\n",
+    "    # Decide whether to follow the true-branch or the false-branch.\n",
+    "    # Compare the feature / value stored in the node,\n",
+    "    # to the example we're considering.\n",
+    "    if verbose:\n",
+    "        print(node.question, node.question.match(row))\n",
+    "\n",
+    "    if node.question.match(row):\n",
+    "        return classify(row, node.true_branch, verbose)\n",
+    "    else:\n",
+    "        return classify(row, node.false_branch, verbose)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -481,33 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Is petal width (cm) >= 0.6?\n",
-      "--> True:\n",
-      "|.Is petal width (cm) >= 1.7?\n",
-      "|.--> True:\n",
-      "|.|.Predict {2.0: 40}\n",
-      "|.--> False:\n",
-      "|.|.Is petal length (cm) >= 4.6?\n",
-      "|.|.--> True:\n",
-      "|.|.|.Predict {1.0: 9, 2.0: 4}\n",
-      "|.|.--> False:\n",
-      "|.|.|.Is sepal width (cm) >= 2.5?\n",
-      "|.|.|.--> True:\n",
-      "|.|.|.|.Predict {1.0: 26}\n",
-      "|.|.|.--> False:\n",
-      "|.|.|.|.Predict {1.0: 10, 2.0: 1}\n",
-      "--> False:\n",
-      "|.Predict {0.0: 45}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_tree(node, spacing=\"\"):\n",
     "    \"\"\" World's most elegant tree printing function.\"\"\"\n",
@@ -533,32 +478,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? True\n",
-      "Actual: 2.0. Predicted: {2.0: '100%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? False\n",
-      "Is petal length (cm) >= 4.6? True\n",
-      "Actual: 1.0. Predicted: {1.0: '69%', 2.0: '30%'}\n",
-      "\n",
-      "Is petal width (cm) >= 0.6? True\n",
-      "Is petal width (cm) >= 1.7? False\n",
-      "Is petal length (cm) >= 4.6? False\n",
-      "Is sepal width (cm) >= 2.5? False\n",
-      "Actual: 1.0. Predicted: {1.0: '90%', 2.0: '9%'}\n",
-      "\n",
-      "Accuracy: 0.9333333333333333\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_leaf(counts):\n",
     "    \"\"\"A nicer way to print the predictions at a leaf.\"\"\"\n",
