Added missing old labs

--- a/Lab5 Decision Trees.ipynb
+++ b/Lab5 Decision Trees.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -289,7 +288,8 @@
     "            \n",
     "            Returns: Bool\n",
     "        \"\"\"\n",
-    "        pass ## YOUR CODE HERE\n"   ]
+    "        pass ## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -307,7 +307,8 @@
     "    \n",
     "    true_rows, false_rows = [], []\n",
     "    \n",
-    "    ## YOUR CODE HERE\n"   ]
+    "    ## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -366,7 +367,8 @@
     "    current_uncertainty = compute_impurity(rows)\n",
     "    n_features = len(rows[0]) - 1  # number of columns\n",
     "\n",
-    "    ## YOUR CODE HERE\n"   ]
+    "    ## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -465,7 +467,8 @@
     "    \"\"\" Recursively search\n",
     "    \"\"\"\n",
     "    \n",
-    "    pass ## YOUR CODE HERE\n"   ]
+    "    pass ## YOUR CODE HERE\n"
+   ]
   },
   {
    "cell_type": "markdown",
