Lab9 requirements installation

--- a/Lab9_SOM.ipynb
+++ b/Lab9_SOM.ipynb
@@ -16,6 +16,18 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "outputs": [],
+      "source": "# lab 9 requirements\n!pip3 install -r lab9_req.txt\n",
+      "metadata": {
+        "pycharm": {
+          "metadata": false,
+          "name": "#%%\n"
+        }
+      }
+    },
+    {
+      "cell_type": "code",
       "execution_count": 162,
       "outputs": [],
       "source": "# Loading dependencies by running the code block below.\nimport numpy as np\nimport pandas as pd\nimport matplotlib.pyplot as plt\nimport seaborn as sns\nfrom scipy.spatial import distance_matrix\nsns.set()\nsns.set_style(\"dark\")\n",
