--- a/development/Lab3 Association Mining.ipynb
+++ b/development/Lab3 Association Mining.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "# Check that data and data path is present\n",
-    "data_folder = \"./data/\"\n",
+    "data_folder = \"../data/\"\n",
     "data_filename = \"shopping.json\"\n",
     "assert os.path.isdir(data_folder) and os.path.exists(data_folder + data_filename), 'Data not found. Make sure to have the most recent version!'\n",
     "\n",
@@ -397,6 +397,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -466,7 +475,7 @@
     "#         sC = sC[np.newaxis]\n",
     "        \n",
     "    conviction[:] = np.inf\n",
-    "    conviction[conf < 1.] = ((1. - sC[conf < 1.]) /\n",
+    "    conviction[conf < 1.] = ((1. - supC[conf < 1.]) /\n",
     "                            (1. - conf[conf < 1.]))\n",
     "\n",
     "    return conviction\n"
@@ -549,6 +558,13 @@
     "\n",
     "df_res"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
